--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.6.7+22
   firebase_storage: ^7.0.0
   intl: ^0.16.1
+  timeago: ^2.0.30
 
 dev_dependencies:
   flutter_test:
